Some translations missing

--- a/l10n/de_DE.json
+++ b/l10n/de_DE.json
@@ -56,6 +56,15 @@
     "Redirect warning" : "Umleitungswarnung",
     "The previous page is sending you to %s" : "Die vorangegangene Seite leitet Sie zu %s weiter",
     "If you do not want to visit that page, you can return to <a href=\"%s\">the mail app</a>." : "Wenn Sie diese Seite nicht besuchen möchten, können Sie <a href=\"%s\">zur Mail-App</a> zurück kehren.",
-    "Continue to %s" : "Fortsetzen auf %s"
+    "Continue to %s" : "Fortsetzen auf %s",
+    "New message" : "Neue Nachricht",
+    "to" : "An",
+    "Subject" : "Betreff",
+    "Message …" : "Nachricht ...",
+    "Forward" : "Weiterleiten",
+    "No messages in this folder!" : "Keine Nachrichten in diesem Ordner",
+    "from" : "Von",
+    "Add attachment from Files" : "Anhänge hinzufügen"
+
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
