--- a/l10n/nl.json
+++ b/l10n/nl.json
@@ -35,7 +35,7 @@
     "Error while deleting message." : "Fout bij verwijderen bericht.",
     "Connecting" : "Verbinden",
     "Connect" : "Verbinden",
-    "Inbox" : "Inbakje",
+    "Inbox" : "Postvak In",
     "Sent" : "Verzonden",
     "Drafts" : "Concepten",
     "Archive" : "Archief",
